# SWARM2026_01

./: .gitignore  README.md
Control SWARM/: Control SWARM.kicad_pcb  Control SWARM.kicad_prl  Control SWARM.kicad_pro  Control SWARM.kicad_sch  fp-info-cache  ~_autosave-Control SWARM.kicad_pcb.lck
Control SWARM unicapa/: Control SWARM.kicad_pcb  Control SWARM.kicad_prl  Control SWARM.kicad_pro  Control SWARM.kicad_sch  Control SWARM.step  bottom_case.stl  freerouting.dsn  lid_case.stl  lower_print.stl  temp-freerouting.dsn  upper_print.stl
Control SWARM unicapa/gerber/: Control SWARM-B_Mask.gbr  Control SWARM-B_Paste.gbr  Control SWARM-B_Silkscreen.gbr  Control SWARM-Edge_Cuts.gbr  Control SWARM-F_Cu.gbr  Control SWARM-F_Mask.gbr  Control SWARM-F_Paste.gbr  Control SWARM-F_Silkscreen.gbr  Control SWARM-NPTH.drl  Control SWARM-PTH.drl  Control SWARM-job.gbrjob
Control SWARM/gerber/: report.txt
Dashboard preliminar/: package-lock.json
Electrónica/: .gitignore
Electrónica/PCB_Drivers/: PCB_drivers_RAS.kicad_pcb  PCB_drivers_RAS.kicad_prl  PCB_drivers_RAS.kicad_pro  PCB_drivers_RAS.kicad_sch
Electrónica/RAS_SWARM.pretty/: DRV8871-MODULE.kicad_mod
Electrónica/symbols/: RAS_SWARM.kicad_sym
ROSDeRaspi/personFollower/: personFollower.py
Software-Rosbridge/: README_ROS2.md  package-lock.json
Software-Rosbridge/control_interface-Cachumbin/: package-lock.json  package.json
Software-Rosbridge/lidar/: package-lock.json  package.json  website.html
Software-Rosbridge/lidar-Ivan/: package-lock.json
codigo_leer_encoders/: codigo_leer_encoders.ino
microros/: esp32v5.ino
personFollower/: ROS2personFollower.py  personFollower.py
ros4meetup/: README.md
ros4meetup/firmware/: README.md  (+1 more)
ros4meetup/ros4meetup/src/lidar/: package.xml  setup.py
ros4meetup/ros4meetup/src/lidar/lidar/: ydlidar_publisher_node.py
ros4meetup/ros4meetup/src/ydlidar_ros2_driver/: CMakeLists.txt  package.xml
ros4meetup/ros4meetup/src/ydlidar_ros2_driver/src/: ydlidar_driver.cpp
(+106 files in other folders)
