<?xml version="1.0"?>
<package format="3">
  <name>ydlidar_ros2_driver</name>
  <version>0.0.1</version>
  <description>YDLidar ROS2 Driver</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros-humble-rclcpp</exec_depend>
</package>
